# swapi_py

./: .yo-rc.json  Dockerfile  README.md  angular.json  package-lock.json  package.json  pyhipster.db3  pyproject.toml
.devcontainer/: devcontainer.json
src/main/docker/: app.yml  jhipster-control-center.yml  monitoring.yml  postgresql.yml  redis-cluster.yml  redis.yml  sonar.yml
src/main/docker/jib/: entrypoint.sh
src/main/docker/redis/: connectRedisCluster.sh
src/main/python/: MailConfiguration.py  Swapi_pyApp.py
src/main/python/config/: BaseConfig.py  FakeDataLoader.py
src/main/python/domain/: AbstractAuditingEntity.py  Authority.py  Film.py  Person.py  Planet.py  Species.py  Starship.py  User.py  Vehicle.py
src/main/python/rest/: AccountResource.py  AppManagment.py  AuthorityResource.py  FilmResource.py  LogoutResource.py  PersonResource.py  PlanetResource.py  PublicUserResource.py  SpeciesResource.py  StarshipResource.py  UserJWTController.py  UserResource.py  VehicleResource.py  __init__.py
src/main/python/schema/: FilmSchema.py  PersonSchema.py  PlanetSchema.py  SpeciesSchema.py  StarshipSchema.py  UserSchema.py  VehicleSchema.py
src/main/python/security/: AuthoritiesConstants.py  SecurityUtils.py
src/main/resources/config/liquibase/: master.xml
src/main/resources/i18n/: messages.properties
src/main/resources/templates/mail/: activationEmail.html  passwordResetEmail.html
src/main/webapp/: index.html  manifest.webapp
src/main/webapp/app/entities/: entity-routing.module.ts
src/main/webapp/app/home/: home.component.html  home.route.ts
src/main/webapp/swagger-ui/: index.html
src/test/python/: conftest.py
src/test/python/functional_tests/: Test_AccountResource.py  Test_AuthorityResource.py  Test_PublicUserResource.py  Test_UserJWTController.py  Test_UserResource.py
src/test/python/unit_tests/: Test_Authority.py  Test_User.py
src/test/resources/config/: application-testcontainers.yml
webpack/: proxy.conf.js  webpack.custom.js
(+92 files in other folders)
